--- a/rap_logbook.ipynb
+++ b/rap_logbook.ipynb
@@ -199,6 +199,253 @@
     "collapsed": false
    },
    "id": "78468db593fa7fd2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Filter out noise\n",
+    "\n",
+    "When looking at the complete dataframe, a lot of transcripts consisted of things like song lyrics, meaningless words and instances where content extraction would be nearly impossible (even for human eyes). Off course, some transcripts could only make sense with the corresponding video and this could mostly be the cause of these 'meaningless transcripts'. For clarity’s sake, here I am only talking about utterly meaningless transcript and not transcripts that were a little vague. It is good to keep in mind that this is still social media data, thus riddled with slang and abbreviations. Examples of the things that in my opinion need filtering are:\n",
+    "\n",
+    "eng_7282795689363393800.txt,\"  Will, will, will, will, will, will,  will, will, will, will, will, will, will,  will, will, will, will,\n",
+    "\n",
+    "eng_7283110983239847200.txt,\"  Run, run, run,  run!  I'm all set.  Oh, oh, oh, oh! One \"\n",
+    "\n",
+    "It is clear to see that these will not be usefully for analysis. If the reader disagrees, this step can be skipped and analysis can just be done on the raw dataframe. \n",
+    "\n",
+    "This step required a lot of experimentation since you want to filter out the mess and as little of the other (even slightly) meaningfully content. Thus, the first idea was to use kmeans and hope I could find clusters of mess (or noise) that I could then just filter out. I tried this by making embeddings of each transcript within the google/t5-base model on the huggingface platform. These embeddings could then be clustered. This did not work out. Probably because the data is too high dimensional. I also tried pca before clustering, but this only helped a little (not much). Judging from the silhouette score, there was not really a clear cluster division present. The highest silhouette achieved (after pca) was about 0.095, which in my opinion is terrible. I also tried other cluster algorithms (DBSCAN, and Gaussian Mixed Modelling). This also did not work out. If someone wants to repeat this (with for example, better embeddings or otherwise) the code for the clustering is kept in supplementary code in this notebook. \n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a5d31e8da3a577aa"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Step 1\n",
+    "\n",
+    "Since the first idea did not work out, I had to get a little creative. Thus, I decided a heuristic approach might work well. A lot of these noisy lines followed a certain pattern. They either had too little words to extract meaning, or they repeated a lot of words (as in the first examples)."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f02cc5f549aac22a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from filtering import Filtering\n",
+    "\n",
+    "# new_csv = Filtering('translated_df_copy.csv', do_heuristic_filter=True, max_words_heuristic=10, max_diversity_heuristic=0.3, do_perplexity_filter=False, filter_out_perplexity=False)\n",
+    "\n",
+    "# new_csv.heuristics(translated_df)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ef6113c8903b05b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "As you can see, this function takes two parameters (max_words_heuristic, and max_diversity_heuristic). These parameters have to be manually tuned to see if it does not filter out to much meaningfull content. The parameters are set by default to 10 and 0.3. This is because, from my testing with n=100 randomly filtered out transcripts, this configuration works the best. Off course, this testing consisted of subjectively looking at whether I thought the filter filtered out something I thought had meaning, and vice versa. The rough results from this subjective test are below:"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f46aede99a2d4486"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Positive class = meaning unclear, \n",
+    "Negative class = meaning clear\n",
+    "\n",
+    "\n",
+    "    | | Actual -> | pos | neg |\n",
+    "|---:|:-------------|:-----------|:------|:------|\n",
+    "| pos (prediction) | 95 | 5      |\n",
+    "| neg (prediction) | 9 | 91   |\n",
+    "\n",
+    "This means the true positive rate with these parameters is 0.95 and the recall is 0.91\n",
+    "A further note is that most of the mistakes came from the word_diversity parameter, so a case could be made for a slightly higher tuning (maybe to 0.35, or 0.40). However, I was pretty pleased with these results"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7be1bbf7e81000b6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Step 2\n",
+    "\n",
+    "After the heuristics, I wanted some way to filter out all the things that did not make sense, but fell outside of having to do with too little word diversity or too little text. These are things where there are a lot of random words, but absolutely no (or very little) meaning.\n",
+    "\n",
+    "For this problem, I eventually landed on a rather unorthodox solution. I thought it could be worth a try to use the perplexity score for this. Perplexity scores are normally used to estimate the performance of language classifiers. However, I thought that if you can take a language model that has been proven to have pretty high performance, you can calculate the perplexity score for each transcript and remove those that are above a certain threshold. The perplexity score is a measure of how 'surprised' the model is by seeing a word, given all the other words in coherence (for llm's this could include context). \n",
+    "Again, since usually this is used as a measure of total model performance on a text corpus, this method is unorthodox, but with a carefully enough chosen threshold of exclusion, this seemed to work very well. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "65ec701cd851b64a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "\n",
+    "# new_csv = Filtering('translated_df_copy.csv', do_heuristic_filter=False, do_perplexity_filter=True, model='gpt2-xl', filter_out_perplexity=True, perplexity_threshold=100)\n",
+    "\n",
+    "# new_csv.perplexity_filter(translated_df)\n",
+    "# new_csv.filter_away_perplexity(translated_df)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bc5b3ed770a3a17"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "These two functions take two parameters: model, and perplexity_threshold. The model is by default initialized as gpt2-xl. I wanted to choose a model that is known to perform pretty well. I also chose the largest variant of gpt2 so better detail separation can be ensured. This is a rather large model and takes a while to run and download, so off-course this can be changed to e.g. ('gpt2'). Perplexity is calculated from the loss function of the model and put as a separate row in the dataframe (without filtering anything yet)\n",
+    "\n",
+    "One thing to mention is that I had the gpt2 deployed with truncation enabled. This requires some explanation. The model can take only a maximum of 1024 tokens. Luckily, this is quite a lot. However, some of the transcripts have more than this and thus, could not be run. I decided that the first 1024 tokens might be enough to determine whether or not this transcript was vague and messy. This way I could cut all the tokens after 1024 and the perplexity of the longer transcripts is calculated on the first 1024 tokens. You could debate this choice. However, I think this is not so terrible an assumption to make that you could determine whether the transcript is good or not by the first 1024 tokens (since this is quite a lot of words already). If you disagree, dividing the text into chunks and inserting each part separately (maybe with a sliding window to keep as much context as possible?), and taking the weighted perplexity might also work.\n",
+    "\n",
+    "This second function (when enabled) will make a new dataframe with the rows that have a perplexity score below the threshold filtered out. By subjective looking, a good threshold is 100. The lower you set it the stricter it is going to look at coherence of sentences and context. However, this is still social media data, which is riddled with 'weird' sentence structures, slang and skips even in the text I'd rather keep. Thus, it is a good idea to set this threshold pretty high to allow for more room. However, you can adjust it depending on how much you want filtered out. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4b1b4ee15c9ca4da"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Both of these methods deleted a large number of rows that were mostly filled with messy data.\n",
+    "With the current tuning of parameters: \n",
+    "The heuristics approach filtered out 429 rows\n",
+    "The perplexity approach filtered out 622 rows\n",
+    "So, out of 6210 rows, 1051 rows were filtered out (about 17%)\n",
+    "\n",
+    "You could argue this is too strict. However, I noticed that it mostly filters out the mess. Still, a lot of data is left that could be hard to classify. But such is to be expected with social media data. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7050761d297f8787"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Supplementary code"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ed90db17997847f1"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## KMeans and other clustering algorithms on T5-Embeddings"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cbae40c74239ee35"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# def pca(embeddings):\n",
+    "#     scaler = StandardScaler()\n",
+    "#     z_embeddings = scaler.fit_transform(embeddings)\n",
+    "#     pca_model = PCA(n_components=160)\n",
+    "#     reduced_embeddings = pca_model.fit_transform(z_embeddings)\n",
+    "#     explained_variance_ratio = pca_model.explained_variance_ratio_\n",
+    "# \n",
+    "#     def n_components():\n",
+    "#         cum_var = explained_variance_ratio.cumsum()\n",
+    "#         plt.figure(figsize=(8, 6))\n",
+    "#         plt.plot(range(1, len(cum_var) + 1), cum_var, marker='o', linestyle='--', color='red')\n",
+    "#         plt.xlabel('components')\n",
+    "#         plt.ylabel('cum variance')\n",
+    "#         plt.title('PCA scree plot')\n",
+    "#         plt.grid(True)\n",
+    "#         plt.show()\n",
+    "# \n",
+    "#         n_components_80 = next(i for i, cumulative in enumerate(cum_var) if cumulative >= 0.80) + 1\n",
+    "#         print(n_components_80)\n",
+    "# \n",
+    "#     # n_components()\n",
+    "#     # The 90% variance argues for 326 components\n",
+    "#     # The 80% variance argues for 186 components\n",
+    "#     # This still seems large for kmeans (curse of dimensionality), but let's try it\n",
+    "#     # Otherwise, different clustering algorithm or kmeans_mini batch\n",
+    "# \n",
+    "#     return reduced_embeddings, pca_model\n",
+    "\n",
+    "# def kmeans(reduced_embeddings):\n",
+    "# \n",
+    "#     def scree(embeddings):\n",
+    "#         inertia = []\n",
+    "#         for k in range(1,21):\n",
+    "#             kmeans_model = KMeans(n_clusters=k)\n",
+    "#             kmeans_model.fit(reduced_embeddings)\n",
+    "#             inertia.append(kmeans_model.inertia_)\n",
+    "# \n",
+    "#         plt.plot(range(1, 21), inertia, marker='o', color='red')\n",
+    "#         plt.title('scree')\n",
+    "#         plt.xlabel('n_clusters')\n",
+    "#         plt.ylabel('inertia')\n",
+    "#         plt.show()\n",
+    "#     # scree(reduced_embeddings)\n",
+    "#     # Scree plot indicated 10 clusters\n",
+    "#     kmeans_model = KMeans(n_clusters=10)\n",
+    "#     kmeans_model.fit(reduced_embeddings)\n",
+    "#     silhouette = silhouette_score(reduced_embeddings, kmeans_model.labels_)\n",
+    "#     return kmeans_model.labels_, silhouette\n",
+    "# \n",
+    "#     # silhouette score of this kmeans was 0.08 which is very poor\n",
+    "\n",
+    "# This only identified one cluster\n",
+    "# def db_cluster(reduced_embeddings):\n",
+    "#     dbscan = DBSCAN(eps=2, min_samples=770)\n",
+    "#     dbscan.fit(reduced_embeddings)\n",
+    "#     labels = dbscan.labels_\n",
+    "#     score = silhouette_score(reduced_embeddings, labels, metric='cosine')\n",
+    "# \n",
+    "#     return labels, score\n",
+    "# \n",
+    "# \n",
+    "# # This also gave silhouette score of at most 0.975\n",
+    "# def GMM(reduced_embeddings):\n",
+    "#     gmm = GaussianMixture(n_components=12)\n",
+    "#     gmm.fit(reduced_embeddings)\n",
+    "#     labels = gmm.predict(reduced_embeddings)\n",
+    "#     return labels, gmm\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-24T08:50:58.412063600Z",
+     "start_time": "2025-01-24T08:50:58.402673800Z"
+    }
+   },
+   "id": "9b2fdcaebb66832a",
+   "execution_count": 1
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1cae332bba9cb62f"
   }
  ],
  "metadata": {
