--- a/rap_logbook.ipynb
+++ b/rap_logbook.ipynb
@@ -340,6 +340,203 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Initial Analyses"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7cd5c595d3a36b7f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "With the filtered dataset, I could try some initial analyses on the data. This required a lot of experimenting and resulted in a lot of data and interesting relationships to explore. In order to not present anything double or unnecessary, I will just move on to some of the visualizations I made of the initial results. \n",
+    "\n",
+    "**IMPORTANT**: Reading this notebook from github might not display the graphs, since the image files are accessed locally\n",
+    "\n",
+    "\n",
+    "NOTE: I only did two kinds of NLP analysis: a sentiment analysis and a topic analysis. For both analyses I used a similar model, namely a pretrained ROBERTA model trained on tweets. \n",
+    "\n",
+    "sentiment: f\"cardiffnlp/twitter-roberta-base-sentiment-latest\"\n",
+    "topic: \"cardiffnlp/twitter-roberta-large-topic-latest\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "89a08440acb8a00c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Sentiment"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9965a1027325ec2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "For sentiment, I have at first some raw percentages. These were little enough that I did not think it really that necessary to make a graph out of them.\n",
+    "\n",
+    "Out of 5158 transcripts\n",
+    "2120 transcripts were labelled as positive (41.1%).\n",
+    "1334 transcripts were labelled as negative (25.9%).\n",
+    "1704 transcripts were labelled as neutral (33.0%).\n",
+    "\n",
+    "1175 of the 2120 (55.4%) positive transcripts were labelled with confidence over 0.8 (confidently positive)\n",
+    "669 of the 2120 (31.6%)  positive transcripts were labelled with confidence over 0.9 (very confidently positive)\n",
+    "\n",
+    "402 of the 1334 (30.1%) negative transcripts were labelled with confidence over 0.8 (confidently negative)\n",
+    "155 of the 1334 (11.6%) negative transcripts were labelled with confidence over 0.9 (very confidently negative)\n",
+    "\n",
+    "However, I did make a density plot of the confidences for each of the different sentiment labels:"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5408f6eb9e6a7908"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "![Alt text](results_graphs/roberta_sent_density.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ffe12bfa9808751f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Topic"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c4fa338e38b7d772"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The graph below shows the distribution of all the classes present in the transcripts as labelled by the ROBERTA model. \n",
+    "Note that the first graph shows a high threshold variant, whereas the second graph shows a low threshold variant. This pertains to the confidence of the labelling. For the high threshold, I only wanted the model to label something as such if it was at least 0.5 (50%) sure it was right. This is very strict. The low threshold variant allows for labelling when the model is at least 0.1 (10%) sure.\n",
+    "Because of the lower threshold, the model could also pick up on a secondary label in some cases. Therefore, the grey bar part of the second graph indicates the presence of secondary labels. Secondary labels allow for a bit more nuance to be detected in some cases, since not all texts necessarily have only one subject or topic. Between the high threshold and low threshold, and even between only primary and with secondary labels, the distribution of classes stays roughly the same interestingly enough. There are some small changes especially with e.g. relationships. Likely this is because a lot of primary labels are dairies and daily life and often those can also qualify for relationships as a second label. You can see this in the heatmap later. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "29263d51097930e6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "![Alt text](results_graphs/roberta_topic_distribution.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a48881fadae9516f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Sentiment over topics"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bfa9481e43c20d28"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This graph below shows the distribution of sentiment scores per individual topic. You can see a lot of difference in most occurring sentiment depending on the topic. Most interesting is the dominance of negative labels within social concern and news. Furthermore, you can see the positive label being quite dominant in almost all categories, especially within fashion and style. This is likely because fashion and style could very much go together with advertisement and this is usually positive (just a thought). "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "72b0a728849466e"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "![Alt text](results_graphs/roberta_sent_over_topic.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "92082cab8e0c8347"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Topic Co_occurrence"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "549f6701bcf11cea"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Below you will see a heatmap projecting co-occurrence of topics. With the introduction of primary topics and secondary topics, it is possible to see which topics most often go together. I don't think there is a lot of super interesting things here. Just in dairies and daily life, you see a lot of different topics co occurring with that, which makes sense since it is the largest category. You can especially see things like relationships, and family often co-occurring with dairies. This suggests to me that it might not be a bad idea to group these three together in one class for the future?"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "25e587805e46de8c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "![Alt text](results_graphs/roberta_topic_co_ocurrence.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "64ff0bba0863cb34"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Some closing notes for the initial analysis"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bcce252d3e5cb6f5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The analyses with the ROBERTA model are included in the pipeline as a part of an analysis class, such that in the future it could be run on all the data. This script will be expanded with different models apart from ROBERTA. This would make it possible to compare model results. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "76f55d886e9bdb4a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# from init_analysis import NLP_Analysis\n",
+    "# \n",
+    "# analysis = NLP_Analysis('translated_df_copy_heuristic_perplexity_out100.csv')\n",
+    "# analyzed_df = analysis.roberta_tweet()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2445b9d69d470c21"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Supplementary code"
    ],
    "metadata": {
