--- a/rap_logbook.ipynb
+++ b/rap_logbook.ipynb
@@ -537,6 +537,70 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Checking the quality of the filter"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6d45cd6c5062c59a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "One lingering question that remained was if the filter methods I applied earlier were filtering out data in an unbiased way. Thus, as a first test, I ran the analyses again in the exact same way, but now for the unfiltered dataset. I then created the exact same graphs to see if there are any significant differences between the filtered dataset and the unfiltered one.\n",
+    "\n",
+    "Now, off course the proper way to do testing like this is to create a labelled test-set and compare various performance metrics. However, this takes a lot of time and a precise (and standardized way) of labelling a part of the dataset. Therefore, before committing to this process, I wanted to see if I could already spot some evidence of bias filtering. If there was already significant signs of bias just by looking at the graphs, I could conclude that filtering in this way would not be a good idea without the need for more precise numbers. \n",
+    "\n",
+    "The results were almost the same for the filtered dataset as for the unfiltered one. The distribution of sentiments were often within 0.1-0.5% of each-other. The only immediately noticeable difference between the filtered and unfiltered dataset was off course that the unfiltered dataset had more rows. However, topic and sentiment distribution were very similar. I will not post the graphs here for room saving, but I have them saved if a recheck needs to be done.  "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7900af21de5d1fc1"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Test set"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e51ae8d68ff49604"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In order to know for sure that everything is working properly, that the model does what you want it to do and to compare models or methods, you need a labelled test set. Therefore, I created a small script that picks out random rows from the dataframe that together make up a test set. I chose to include 300 rows. This might seem like a lot, but TikTok data is difficult to label even for humans. Thus, I hoped that a larger sample might eleviate some mistakes and make the testing more accurate and fair. \n",
+    "\n",
+    "I started labelling this test set for use. However, a few problems popped up. As earlier mentioned, it is very hard to decide on especially the topic of some transcripts. Most transcripts could fit in multiple categories. Therefore, when calculating performance metrics for the model, I want to leave some room for 'difference of opinion' between model and human. There are a few ways I thought I could do this:\n",
+    "\n",
+    "1. The first one is to mainly test performance on categories that we actually care about. So, instead of caring about global performance of all topics, I would test how accurate is the model at picking out e.g. political topics or fitness & health topics. This would constrain performance to only the categories we care most about. A bigger test set is then also preferred. \n",
+    "2. The second option is to compare my labels with both the primary and secondary label the model gave and if either one agrees with mine, this is reason for accurate performance on that transcript. \n",
+    "\n",
+    "Both of these options can be used in tandem. Thus, when I later present performance metrics, keep all the aforementioned points in mind. And know that with this particular data, it is very likely that I also make mistakes during the labelling, since the data is sometimes so vague. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7f22c9b95007e161"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# import test_set as ts\n",
+    "# filtered_dataframe = pd.read_csv('translated_df_copy_heuristic_perplexity_out100.csv')\n",
+    "# test_set = ts.create_test_set(filtered_dataframe)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "83ce50ff8cd97ad6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Supplementary code"
    ],
    "metadata": {
