--- a/rap_logbook.ipynb
+++ b/rap_logbook.ipynb
@@ -31,6 +31,33 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Task-list\n",
+    "\n",
+    "* Clean up pipeline code\n",
+    "* Make pipeline code more efficient\n",
+    "* Check if more preprocessing of text before tokenizing gives an accuracy/max_words advantage\n",
+    "\n",
+    "* Run precision recall metrics for politics topic\n",
+    "\n",
+    "* Decide on final categories for topics\n",
+    "* Make Llama 3 code work\n",
+    "* Run Llama 2 on cluster\n",
+    "\n",
+    "### Possible tasks\n",
+    "* Let an llm (prob. llama) label the dataset for fine tuning ROBERTA\n",
+    "* Replace translation by a llm (prob. llama)\n",
+    "* Let llama also rate transcripts on likelihood of misinformation\n",
+    "* Let llama label transcripts as advertisement or not\n",
+    "* Edit ROBERTA code s.t. it can give three labels for loosening up accuracy"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1a014d6dc5fe9ceb"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Preprocess raw folders and translate\n",
     "\n",
     "## Step 1: folder moving and name changing\n",
@@ -597,6 +624,66 @@
     "collapsed": false
    },
    "id": "83ce50ff8cd97ad6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# ROBERTA performance metrics\n",
+    "\n",
+    "With the test set (n=300) I was able to calculate performance metrics for the ROBERTA model on both the topic analysis and the sentiment analysis. It is important to keep in mind that any 'wrong' label by the ROBERTA model could be wrong for multiple reasons:\n",
+    "\n",
+    "1. It could also be right (difference of opinion, due too difficult to label data). In a lot of cases the predicted label could also be valid as well as my label or a predicted label could be more right than mine. \n",
+    "2. Depends on the definition you give to a certain topic (e.g. politics). I took politics to be relatively broad; also including various social issues or complaints. The ROBERTA model might have a stricter definition of a topic. \n",
+    "3. It is just plain wrong.\n",
+    "\n",
+    "Thus, the absolute scores (especially for topic) might not be that interesting. When I later compare models, these metrics might be more useful.\n",
+    "\n",
+    "## Topic analysis\n",
+    "These are the results as calculated with the testing_notebook.ipynb:\n",
+    "\n",
+    "The accuracy within the vlog topic: 69.35%\n",
+    "The accuracy within the relationships topic: 79.63%\n",
+    "The accuracy within the politics topic: 45.45%\n",
+    "The accuracy within the food topic: 85.71%\n",
+    "The accuracy within the health topic: 57.14%\n",
+    "The accuracy within the beauty topic: 69.23%\n",
+    "\n",
+    " With an average accuracy of 67.75%\n",
+    " \n",
+    "## Sentiment analysis\n",
+    "\n",
+    "The accuracy for positive is: 78.68%\n",
+    "The accuracy for negative is: 68.42%\n",
+    "The accuracy for neutral is: 64.71%\n",
+    "\n",
+    "Confusion matrix: \n",
+    "[[ 65  23   7]\n",
+    " [ 12  44  12]\n",
+    " [  9  20 107]]\n",
+    " \n",
+    "The average accuracy is: 72.24%, \n",
+    " The weighted precision is: 0.74, \n",
+    " The weighted recall is: 0.72\n",
+    " \n",
+    "## Topic distribution manual labels:\n",
+    "The percentage for food is: 9.36%\n",
+    " The percentage for vlog is: 20.74%\n",
+    " The percentage for health is: 2.34%\n",
+    " The percentage for politics is: 7.36%\n",
+    " The percentage for meme is: 3.34%\n",
+    " The percentage for misc is: 20.74%\n",
+    " The percentage for relationships is: 18.06%\n",
+    " The percentage for art is: 5.69%\n",
+    " The percentage for beauty is: 8.7%\n",
+    " The percentage for self is: 3.68%\n",
+    " \n",
+    "ps. take into account that I used some new categories for the manual labelling in preparation for the llm analyses. The most important categories overlap. \n",
+    " \n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a0dcdfed404593e0"
   },
   {
    "cell_type": "markdown",
