--- a/rap_logbook.ipynb
+++ b/rap_logbook.ipynb
@@ -688,6 +688,27 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Proposed topics for llm analysis (/finetune)\n",
+    "\n",
+    "Politics & Social Issues (politics)\n",
+    "Health & Fitness (health)\n",
+    "Personal vlogs & Daily life (vlog)\n",
+    "Relationships (relationships)\n",
+    "Fashion & Beauty (beauty)\n",
+    "Food & Dining (food)\n",
+    "Art & Culture (art)\n",
+    "Self-Improvement (self)\n",
+    "Meme (meme)\n",
+    "Misc. (misc)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2dce4c9712ac3f1d"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Supplementary code"
    ],
    "metadata": {
